[gd_scene load_steps=5 format=3 uid="uid://bu1hfecohiqq5"]

[ext_resource type="Script" path="res://Lobby/LobbyManagerUI/lobby_manager_ui.gd" id="1_ni4bo"]
[ext_resource type="PackedScene" uid="uid://iblvcgqey3fc" path="res://Characters/Player/player.tscn" id="2_ijpgf"]
[ext_resource type="PackedScene" uid="uid://dx2di36fgl7q" path="res://Maps/Map1/map_1.tscn" id="3_iln7k"]
[ext_resource type="PackedScene" uid="uid://b2nj73nv1hj5u" path="res://Maps/Map2/map_2.tscn" id="4_gg813"]

[node name="LobbyManagerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ni4bo")
player_packed_scene = ExtResource("2_ijpgf")
map_packed_scenes = Array[PackedScene]([ExtResource("3_iln7k"), ExtResource("4_gg813")])

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Host_Join" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join"]
layout_mode = 2

[node name="Host" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer"]
layout_mode = 2

[node name="HostGame" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Host Game"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MarginContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="PortNumber" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2

[node name="PortNumberLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/PortNumber"]
layout_mode = 2
text = "Port Number:"

[node name="PortNumberInput" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/PortNumber"]
layout_mode = 2
size_flags_horizontal = 3
text = "1111"

[node name="HostButtonFields" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2

[node name="ExternalIP" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields"]
layout_mode = 2

[node name="ExternalIPLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields/ExternalIP"]
layout_mode = 2
text = "External IP:"

[node name="ExternalIPInput" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields/ExternalIP"]
layout_mode = 2

[node name="HostButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Host"

[node name="SelectMap" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields"]
layout_mode = 2

[node name="SelectMapLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields/SelectMap"]
layout_mode = 2
text = "Select Map:"

[node name="SelectMapInput" type="OptionButton" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields/SelectMap"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true

[node name="StartGameButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields"]
layout_mode = 2
disabled = true
text = "Start Game"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 50

[node name="Join" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer"]
layout_mode = 2

[node name="JoinExistingGame" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Join A Game"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MarginContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="IPAddressFields" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2

[node name="IPAddressLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/IPAddressFields"]
layout_mode = 2
text = "IP Address:"

[node name="IPAddressInput" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/IPAddressFields"]
layout_mode = 2
theme_override_constants/minimum_character_width = 20
text = "localhost"

[node name="JoinPortNumberFields" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2

[node name="JoinPortNumberLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/JoinPortNumberFields"]
layout_mode = 2
text = "Port Number"

[node name="JoinPortNumberInput" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/JoinPortNumberFields"]
layout_mode = 2
theme_override_constants/minimum_character_width = 20
text = "1111"

[node name="JoinButtonFields" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2

[node name="JoinButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/JoinButtonFields"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Join"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.53

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Players List"
horizontal_alignment = 1

[node name="PlayersList" type="ItemList" parent="MarginContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 360)
layout_mode = 2
size_flags_vertical = 3
select_mode = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="item_selected" from="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields/SelectMap/SelectMapInput" to="." method="_on_select_map_input_item_selected"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/JoinButtonFields/JoinButton" to="." method="_on_join_button_pressed"]
